# typeset

./: .dockerignore  .env.example  .gitignore  API.md  Cargo.toml  Dockerfile  HTML.md  README.md  build_basekit_json.py  build_myjobquote_json.py  deploy.sh  docker-compose.prod.yml  docker-compose.yml  php-basekit.json  php-basekit.md  php-myjobquote.json  php-myjobquote.md  project.md  render-json.sh  setup-server.sh  typeset.nginx.conf  typeset.service
.claude/: settings.local.json
.github/workflows/: build.yml
examples/: acme-corp.yaml  ai-strategy.json
frontend/: Dockerfile  next.config.ts  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/editor/: page.tsx
frontend/app/history/: page.tsx
frontend/app/profiles/: page.tsx
frontend/app/profiles/new/: page.tsx
frontend/components/: nav.tsx
frontend/lib/: api.ts
migrations/: 001_create_client_profiles.sql  002_create_render_history.sql
src/: config.rs  error.rs  main.rs  rate_limit.rs  state.rs
src/brand/: engine.rs
src/db/: queries.rs
src/models/: client_profile.rs  document.rs  mod.rs  render_job.rs
src/parser/: json.rs  markdown.rs  mod.rs
src/renderers/: docx.rs  mod.rs  pdf.rs  typst.rs
src/routes/: auth.rs  clients.rs  health.rs  history.rs  mod.rs  preview.rs  render.rs
src/storage/: spaces.rs
tests/fixtures/: sample.md  sample_profile.json
