[package]
name = "typeset"
version = "0.1.0"
edition = "2021"

[dependencies]
# HTTP server
axum = { version = "0.7", features = ["multipart"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "signal"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }

# Markdown parsing
pulldown-cmark = "0.12"

# PDF generation via Typst (subprocess)
tempfile = "3"

# DOCX generation
docx-rs = "0.4"

# Database
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono"] }

# Serialisation
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Utilities
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dotenvy = "0.15"
sha2 = "0.10"

[profile.release]
opt-level = 3
strip = true
